assets/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');

*{
    background-color: #cbf7ed;;
    color:#161925;
    font-family: "Lexend Deca" sans-serif;
}

.card{
    background-color: #cbf7ed;
    padding:10px;
    border:none;
    margin:20px;
    z-index:2;
}

.card-image{
    height: 30vh;
    width:30vh
}

.image-card{
    margin: 0 auto;
    width:100%;
    height: auto;
}

.container-fluid{
    padding-left: 5vw;
    padding-right: 5vw;
    width: 100vw;
    z-index: 1;
}

.navbar{
    background-color:#406e8e;
    color:#161925;
    position:fixed;
    right:1px;
    top:0px;
    z-index: 10;
    width:250px;
}

.navbar-toggler{
    top:0;
    right:0;
}

.nav-item{
    background-color: #406e8e;
}

.title{
    order:1;
    background-color: #406e8e;
}

.title-bar{
    width:100%;
    padding:20px;
    min-height:10vh;
    background-color: #406e8e;
    background-size: auto;
    position:fixed;
    z-index: 9;
    top:0px;
    left:0px;
    right:0px;
}

.jumbotron{
    background-color: #cbf7ed;
}

.link-logo-image{
    width:10vw;
}

.jumbotron{
    margin-top: 100px;
}

@media (max-width: 500px){
    .navbar{
        background-color:#406e8e;
        color:#161925;
        position:fixed;
        left:38vw;
        top:22vh;
        z-index: 10;
        width:250px;
    }

    .navbar-toggler-icon{
        align-self: flex-end;
    }
    
    .title-bar{
        height: 32vh;
    }
}

